# functional-shuffle

./: ChangeLog.md  LICENSE  README.md  functional-shuffle.cabal
src/Data/List/: Shuffle.hs
